--- a/Laboratorio_1/Problema_1/Problema_1.qsf
+++ b/Laboratorio_1/Problema_1/Problema_1.qsf
@@ -44,3 +44,4 @@ set_global_assignment -name PROJECT_CREATION_TIME_DATE "20:07:43  MARCH 06, 2025
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name BOARD "Cyclone V SoC Development Kit"
+set_global_assignment -name SYSTEMVERILOG_FILE BinToBCD.sv
