--- a/Laboratorio 1/Problema 2/problema2_top.qsf
+++ b/Laboratorio 1/Problema 2/problema2_top.qsf
@@ -59,7 +59,6 @@ set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH problema2_top_t
 set_global_assignment -name EDA_TEST_BENCH_NAME problema2_top_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id problema2_top_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME problema2_top_tb -section_id problema2_top_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE problema2_top_tb.vhd -section_id problema2_top_tb
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
@@ -86,4 +85,6 @@ set_location_assignment PIN_AD17 -to HEX1[3]
 set_location_assignment PIN_AE16 -to HEX1[2]
 set_location_assignment PIN_V16 -to HEX1[1]
 set_location_assignment PIN_AF16 -to HEX1[0]
+set_global_assignment -name VHDL_FILE problema2_top_tb.vhd
+set_global_assignment -name EDA_TEST_BENCH_FILE problema2_top_tb.vhd -section_id problema2_top_tb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
