--- a/Laboratorio_2/Problema 1/Problema_1.qsf
+++ b/Laboratorio_2/Problema 1/Problema_1.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSXFC6D6F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY top_module
+set_global_assignment -name TOP_LEVEL_ENTITY multiplier
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "22:52:19  MARCH 20, 2025"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -54,15 +54,27 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH tb_top_module -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH multiplier_tb -section_id eda_simulation
 set_global_assignment -name SYSTEMVERILOG_FILE top_module.sv
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name SYSTEMVERILOG_FILE tb_top_module.sv
 set_global_assignment -name EDA_TEST_BENCH_NAME tb_top_module -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_top_module
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_top_module -section_id tb_top_module
-set_global_assignment -name EDA_TEST_BENCH_FILE tb_top_module.sv -section_id tb_top_module
 set_global_assignment -name SYSTEMVERILOG_FILE divisor_nbit.sv
+set_global_assignment -name SYSTEMVERILOG_FILE multiplier.sv
+set_global_assignment -name SYSTEMVERILOG_FILE multiplier_tb.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME multiplier_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id multiplier_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME multiplier_tb -section_id multiplier_tb
+set_global_assignment -name SYSTEMVERILOG_FILE fulladder.sv
+set_global_assignment -name SYSTEMVERILOG_FILE fulladder_tb.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME fulladder_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id fulladder_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME fulladder_tb -section_id fulladder_tb
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name EDA_TEST_BENCH_FILE tb_top_module.sv -section_id tb_top_module
+set_global_assignment -name EDA_TEST_BENCH_FILE multiplier_tb.sv -section_id multiplier_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE fulladder_tb.sv -section_id fulladder_tb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
