--- a/Laboratorio_2/Problema 1/Problema_1.qsf
+++ b/Laboratorio_2/Problema 1/Problema_1.qsf
@@ -70,4 +70,5 @@ set_global_assignment -name SYSTEMVERILOG_FILE or_nbit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE xor_nbit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE shift_right_nbit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE shift_left_nbit.sv
+set_global_assignment -name SYSTEMVERILOG_FILE modulo_nbit.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
