--- a/Laboratorio_2/Problema 1/Problema_1.qsf
+++ b/Laboratorio_2/Problema 1/Problema_1.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSXFC6D6F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY main
+set_global_assignment -name TOP_LEVEL_ENTITY frecuency
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "22:52:19  MARCH 20, 2025"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -52,13 +52,7 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH tb_top_module -section_id eda_simulation
-set_global_assignment -name EDA_TEST_BENCH_NAME tb_top_module -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_top_module
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_top_module -section_id tb_top_module
-set_global_assignment -name EDA_TEST_BENCH_NAME multiplier_tb -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id multiplier_tb
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME multiplier_tb -section_id multiplier_tb
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH frecuency_tb -section_id eda_simulation
 
 
 #============================================================
@@ -150,12 +144,19 @@ set_location_assignment PIN_AG20 -to HEX5[3]
 set_location_assignment PIN_AE19 -to HEX5[4]
 set_location_assignment PIN_AF19 -to HEX5[5]
 set_location_assignment PIN_AB21 -to HEX5[6]
+set_global_assignment -name EDA_TEST_BENCH_NAME multiplier_nbit_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id multiplier_nbit_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME multiplier_nbit_tb -section_id multiplier_nbit_tb
+set_global_assignment -name EDA_TEST_BENCH_NAME alu_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id alu_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME alu_tb -section_id alu_tb
+set_global_assignment -name SYSTEMVERILOG_FILE frecuency_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE alu_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE alu.sv
 set_global_assignment -name SYSTEMVERILOG_FILE multiplier_nbit_tb.sv
 set_global_assignment -name SYSTEMVERILOG_FILE multiplier_nbit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE restador_1bit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE restador_nbit.sv
-set_global_assignment -name SYSTEMVERILOG_FILE top_module.sv
-set_global_assignment -name SYSTEMVERILOG_FILE tb_top_module.sv
 set_global_assignment -name SYSTEMVERILOG_FILE divisor_nbit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE and_nbit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE or_nbit.sv
@@ -167,6 +168,16 @@ set_global_assignment -name SYSTEMVERILOG_FILE sumador_parametrizable.sv
 set_global_assignment -name SYSTEMVERILOG_FILE seven_segment_driver.sv
 set_global_assignment -name SYSTEMVERILOG_FILE main.sv
 set_global_assignment -name SYSTEMVERILOG_FILE BinToBCD.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME frecuency_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id frecuency_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME frecuency_tb -section_id frecuency_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE multiplier_nbit_tb.sv -section_id multiplier_nbit_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE alu_tb.sv -section_id alu_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE frecuency_tb.sv -section_id frecuency_tb
+set_global_assignment -name SYSTEMVERILOG_FILE frecuency.sv
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CLOCK2_50
 set_instance_assignment -name IO_STANDARD "2.5 V" -to CLOCK3_50
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CLOCK4_50
@@ -237,9 +248,4 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX5[3]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX5[4]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX5[5]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX5[6]
-set_global_assignment -name EDA_TEST_BENCH_FILE tb_top_module.sv -section_id tb_top_module
-set_global_assignment -name EDA_TEST_BENCH_FILE multiplier_tb.sv -section_id multiplier_tb
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
