--- a/Laboratorio_2/Problema 1/Problema_1.qsf
+++ b/Laboratorio_2/Problema 1/Problema_1.qsf
@@ -52,7 +52,7 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH frecuency_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH alu_tb -section_id eda_simulation
 
 
 #============================================================
@@ -171,13 +171,7 @@ set_global_assignment -name SYSTEMVERILOG_FILE BinToBCD.sv
 set_global_assignment -name EDA_TEST_BENCH_NAME frecuency_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id frecuency_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME frecuency_tb -section_id frecuency_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE multiplier_nbit_tb.sv -section_id multiplier_nbit_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE alu_tb.sv -section_id alu_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE frecuency_tb.sv -section_id frecuency_tb
 set_global_assignment -name SYSTEMVERILOG_FILE frecuency.sv
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CLOCK2_50
 set_instance_assignment -name IO_STANDARD "2.5 V" -to CLOCK3_50
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CLOCK4_50
@@ -248,4 +242,10 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX5[3]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX5[4]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX5[5]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX5[6]
+set_global_assignment -name EDA_TEST_BENCH_FILE multiplier_nbit_tb.sv -section_id multiplier_nbit_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE alu_tb.sv -section_id alu_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE frecuency_tb.sv -section_id frecuency_tb
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
