--- a/Laboratorio_3/Laboratorio3.qsf
+++ b/Laboratorio_3/Laboratorio3.qsf
@@ -51,12 +51,6 @@ set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name SYSTEMVERILOG_FILE counter.sv
-set_global_assignment -name SYSTEMVERILOG_FILE smiley_test.sv
-set_global_assignment -name QIP_FILE clock_50_25.qip
-set_global_assignment -name SIP_FILE clock_50_25.sip
-set_global_assignment -name SYSTEMVERILOG_FILE vga_driver.sv
-set_global_assignment -name SYSTEMVERILOG_FILE video_sync_generator.sv
 
 #============================================================
 # VGA
@@ -122,6 +116,13 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_B[6]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_B[7]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_BLANK_N
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_SYNC_N
+set_global_assignment -name SYSTEMVERILOG_FILE sprite_tile.sv
+set_global_assignment -name SYSTEMVERILOG_FILE counter.sv
+set_global_assignment -name SYSTEMVERILOG_FILE smiley_test.sv
+set_global_assignment -name QIP_FILE clock_50_25.qip
+set_global_assignment -name SIP_FILE clock_50_25.sip
+set_global_assignment -name SYSTEMVERILOG_FILE vga_driver.sv
+set_global_assignment -name SYSTEMVERILOG_FILE video_sync_generator.sv
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
