--- a/Laboratorio_3/Laboratorio3.qsf
+++ b/Laboratorio_3/Laboratorio3.qsf
@@ -126,4 +126,5 @@ set_global_assignment -name SYSTEMVERILOG_FILE video_sync_generator.sv
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE screen_drawer.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
