--- a/Laboratorio_3/Laboratorio3.qsf
+++ b/Laboratorio_3/Laboratorio3.qsf
@@ -87,6 +87,19 @@ set_location_assignment PIN_AJ22 -to VGA_SYNC_N
 
 set_location_assignment PIN_AA30 -to reset
 set_location_assignment PIN_AF14 -to clk
+set_global_assignment -name SYSTEMVERILOG_FILE sprite_tile.sv
+set_global_assignment -name SYSTEMVERILOG_FILE counter.sv
+set_global_assignment -name SYSTEMVERILOG_FILE smiley_test.sv
+set_global_assignment -name QIP_FILE clock_50_25.qip
+set_global_assignment -name SIP_FILE clock_50_25.sip
+set_global_assignment -name SYSTEMVERILOG_FILE vga_driver.sv
+set_global_assignment -name SYSTEMVERILOG_FILE video_sync_generator.sv
+set_global_assignment -name SYSTEMVERILOG_FILE screen_drawer.sv
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS NOT_USED -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH player_matrix_tb -section_id eda_simulation
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_CLK
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_HS
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_VS
@@ -116,15 +129,4 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_B[6]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_B[7]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_BLANK_N
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_SYNC_N
-set_global_assignment -name SYSTEMVERILOG_FILE sprite_tile.sv
-set_global_assignment -name SYSTEMVERILOG_FILE counter.sv
-set_global_assignment -name SYSTEMVERILOG_FILE smiley_test.sv
-set_global_assignment -name QIP_FILE clock_50_25.qip
-set_global_assignment -name SIP_FILE clock_50_25.sip
-set_global_assignment -name SYSTEMVERILOG_FILE vga_driver.sv
-set_global_assignment -name SYSTEMVERILOG_FILE video_sync_generator.sv
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name SYSTEMVERILOG_FILE screen_drawer.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
