--- a/Laboratorio_3/Laboratorio3.qsf
+++ b/Laboratorio_3/Laboratorio3.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSXFC6D6F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY vga_driver
+set_global_assignment -name TOP_LEVEL_ENTITY connect_4_game
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "19:45:28  APRIL 29, 2025"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
@@ -87,6 +87,9 @@ set_location_assignment PIN_AJ22 -to VGA_SYNC_N
 
 set_location_assignment PIN_AA30 -to reset
 set_location_assignment PIN_AF14 -to clk
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS NOT_USED -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH player_matrix_tb -section_id eda_simulation
+set_global_assignment -name SYSTEMVERILOG_FILE connect_4_game.sv
 set_global_assignment -name SYSTEMVERILOG_FILE sprite_tile.sv
 set_global_assignment -name SYSTEMVERILOG_FILE counter.sv
 set_global_assignment -name SYSTEMVERILOG_FILE smiley_test.sv
@@ -95,8 +98,16 @@ set_global_assignment -name SIP_FILE clock_50_25.sip
 set_global_assignment -name SYSTEMVERILOG_FILE vga_driver.sv
 set_global_assignment -name SYSTEMVERILOG_FILE video_sync_generator.sv
 set_global_assignment -name SYSTEMVERILOG_FILE screen_drawer.sv
-set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS NOT_USED -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH player_matrix_tb -section_id eda_simulation
+set_global_assignment -name SYSTEMVERILOG_FILE connect4_fsm.sv
+set_global_assignment -name SYSTEMVERILOG_FILE connect4_fsm_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE win_condition_checker.sv
+set_global_assignment -name SYSTEMVERILOG_FILE player_switcher.sv
+set_global_assignment -name SYSTEMVERILOG_FILE board_manager.sv
+set_global_assignment -name SYSTEMVERILOG_FILE make_move.sv
+set_global_assignment -name SYSTEMVERILOG_FILE column_selector.sv
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_CLK
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_HS
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_VS
@@ -126,14 +137,4 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_B[6]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_B[7]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_BLANK_N
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_SYNC_N
-set_global_assignment -name SYSTEMVERILOG_FILE connect4_fsm.sv
-set_global_assignment -name SYSTEMVERILOG_FILE connect4_fsm_tb.sv
-set_global_assignment -name SYSTEMVERILOG_FILE win_condition_checker.sv
-set_global_assignment -name SYSTEMVERILOG_FILE player_switcher.sv
-set_global_assignment -name SYSTEMVERILOG_FILE board_manager.sv
-set_global_assignment -name SYSTEMVERILOG_FILE make_move.sv
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name SYSTEMVERILOG_FILE column_selector.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
