--- a/Laboratorio_3/Laboratorio3.qsf
+++ b/Laboratorio_3/Laboratorio3.qsf
@@ -265,4 +265,5 @@ set_location_assignment PIN_AJ22 -to VGA_SYNC_N
 
 set_global_assignment -name SYSTEMVERILOG_FILE BinToBCD.sv
 set_global_assignment -name SYSTEMVERILOG_FILE seven_segment_driver.sv
+set_global_assignment -name SYSTEMVERILOG_FILE timer.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
