--- a/Laboratorio_3/Laboratorio3.qsf
+++ b/Laboratorio_3/Laboratorio3.qsf
@@ -268,4 +268,5 @@ set_global_assignment -name SYSTEMVERILOG_FILE seven_segment_driver.sv
 set_global_assignment -name SYSTEMVERILOG_FILE timer.sv
 set_global_assignment -name SYSTEMVERILOG_FILE debounce.sv
 set_global_assignment -name SYSTEMVERILOG_FILE win_checker.sv
+set_global_assignment -name SYSTEMVERILOG_FILE pseudo_random.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
