--- a/Laboratorio_3/Laboratorio3.qsf
+++ b/Laboratorio_3/Laboratorio3.qsf
@@ -55,22 +55,6 @@ set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_location_assignment PIN_AF14 -to clk
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS NOT_USED -section_id eda_simulation
 set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH player_matrix_tb -section_id eda_simulation
-set_global_assignment -name SYSTEMVERILOG_FILE connect_4_game.sv
-set_global_assignment -name SYSTEMVERILOG_FILE sprite_tile.sv
-set_global_assignment -name SYSTEMVERILOG_FILE counter.sv
-set_global_assignment -name SYSTEMVERILOG_FILE smiley_test.sv
-set_global_assignment -name QIP_FILE clock_50_25.qip
-set_global_assignment -name SIP_FILE clock_50_25.sip
-set_global_assignment -name SYSTEMVERILOG_FILE vga_driver.sv
-set_global_assignment -name SYSTEMVERILOG_FILE video_sync_generator.sv
-set_global_assignment -name SYSTEMVERILOG_FILE screen_drawer.sv
-set_global_assignment -name SYSTEMVERILOG_FILE connect4_fsm.sv
-set_global_assignment -name SYSTEMVERILOG_FILE connect4_fsm_tb.sv
-set_global_assignment -name SYSTEMVERILOG_FILE win_condition_checker.sv
-set_global_assignment -name SYSTEMVERILOG_FILE player_switcher.sv
-set_global_assignment -name SYSTEMVERILOG_FILE board_manager.sv
-set_global_assignment -name SYSTEMVERILOG_FILE make_move.sv
-set_global_assignment -name SYSTEMVERILOG_FILE column_selector.sv
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
@@ -263,6 +247,27 @@ set_location_assignment PIN_AJ22 -to VGA_SYNC_N
 
 
 
+set_global_assignment -name SYSTEMVERILOG_FILE clock_div.sv
+set_global_assignment -name SYSTEMVERILOG_FILE UART/UART_TX.sv
+set_global_assignment -name SYSTEMVERILOG_FILE UART/UART_RX.sv
+set_global_assignment -name SYSTEMVERILOG_FILE UART/UART_Counter.sv
+set_global_assignment -name SYSTEMVERILOG_FILE UART/Edge_Detector.sv
+set_global_assignment -name SYSTEMVERILOG_FILE connect_4_game.sv
+set_global_assignment -name SYSTEMVERILOG_FILE sprite_tile.sv
+set_global_assignment -name SYSTEMVERILOG_FILE counter.sv
+set_global_assignment -name SYSTEMVERILOG_FILE smiley_test.sv
+set_global_assignment -name QIP_FILE clock_50_25.qip
+set_global_assignment -name SIP_FILE clock_50_25.sip
+set_global_assignment -name SYSTEMVERILOG_FILE vga_driver.sv
+set_global_assignment -name SYSTEMVERILOG_FILE video_sync_generator.sv
+set_global_assignment -name SYSTEMVERILOG_FILE screen_drawer.sv
+set_global_assignment -name SYSTEMVERILOG_FILE connect4_fsm.sv
+set_global_assignment -name SYSTEMVERILOG_FILE connect4_fsm_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE win_condition_checker.sv
+set_global_assignment -name SYSTEMVERILOG_FILE player_switcher.sv
+set_global_assignment -name SYSTEMVERILOG_FILE board_manager.sv
+set_global_assignment -name SYSTEMVERILOG_FILE make_move.sv
+set_global_assignment -name SYSTEMVERILOG_FILE column_selector.sv
 set_global_assignment -name SYSTEMVERILOG_FILE BinToBCD.sv
 set_global_assignment -name SYSTEMVERILOG_FILE seven_segment_driver.sv
 set_global_assignment -name SYSTEMVERILOG_FILE timer.sv
