--- a/Laboratorio_3/Laboratorio3.qsf
+++ b/Laboratorio_3/Laboratorio3.qsf
@@ -269,4 +269,5 @@ set_global_assignment -name SYSTEMVERILOG_FILE timer.sv
 set_global_assignment -name SYSTEMVERILOG_FILE debounce.sv
 set_global_assignment -name SYSTEMVERILOG_FILE win_checker.sv
 set_global_assignment -name SYSTEMVERILOG_FILE pseudo_random.sv
+set_global_assignment -name SYSTEMVERILOG_FILE random_column_selector.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
