--- a/Laboratorio_3/Laboratorio3.qsf
+++ b/Laboratorio_3/Laboratorio3.qsf
@@ -53,8 +53,8 @@ set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 
 set_location_assignment PIN_AF14 -to clk
-set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS NOT_USED -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH player_matrix_tb -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH connect4_fsm_tb -section_id eda_simulation
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
@@ -284,4 +284,8 @@ set_global_assignment -name SYSTEMVERILOG_FILE timer.sv
 set_global_assignment -name SYSTEMVERILOG_FILE debounce.sv
 set_global_assignment -name SYSTEMVERILOG_FILE win_checker.sv
 set_global_assignment -name SYSTEMVERILOG_FILE pseudo_random.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME connect4_fsm_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id connect4_fsm_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME connect4_fsm_tb -section_id connect4_fsm_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE connect4_fsm_tb.sv -section_id connect4_fsm_tb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
