--- a/Laboratorio_3/Laboratorio3.qsf
+++ b/Laboratorio_3/Laboratorio3.qsf
@@ -53,8 +53,8 @@ set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 
 set_location_assignment PIN_AF14 -to clk
-set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS NOT_USED -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH player_matrix_tb -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH connect4_fsm_tb -section_id eda_simulation
 
 #============================================================
 # KEY
@@ -284,4 +284,8 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_B[6]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_B[7]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_BLANK_N
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to VGA_SYNC_N
+set_global_assignment -name EDA_TEST_BENCH_NAME connect4_fsm_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id connect4_fsm_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME connect4_fsm_tb -section_id connect4_fsm_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE connect4_fsm_tb.sv -section_id connect4_fsm_tb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
